syntax = "proto3";
package commercionetwork.commercionetwork.upgrade;

import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
// this line is used by starport scaffolding # 1

option go_package = "github.com/commercionetwork/commercionetwork/x/upgrade/types";

// Query defines the gRPC querier service.
service Query {
    // this line is used by starport scaffolding # 2

	// Queries a list of currentUpgrade items.
	rpc CurrentUpgrade(QueryCurrentUpgradeRequest) returns (QueryCurrentUpgradeResponse) {
		option (google.api.http).get = "/commercionetwork/commercionetwork/upgrade/currentUpgrade";
	}

}

// this line is used by starport scaffolding # 3
message QueryCurrentUpgradeRequest {
}

message QueryCurrentUpgradeResponse {
    bytes currentUpgrade = 1;
}

